--- a/main.html
+++ b/main.html
@@ -7,8 +7,39 @@
 </head>
 
 <body>
+	<table border="1">
+		<thead>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Ram</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Sita</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Laxman</td>
+			</tr>
+		</tbody>
+	</table>
+	<h1>List of medias</h1>
+	<ol>
+	<li><img src="https://picsum.photos/id/123/200/300" alt="picsum"/></li>
+	<li><video controls src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+		<source
+    src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+    type="video/ogg" />
+	</video></li>
+		<li><audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg."></audio></li>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    
+	</ol>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
