--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
     src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
     type="video/ogg" />
 	</video></li>
-		<li><audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg."></audio></li>
+		<li><audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
 	<!-- the entire body must be written by student -->
     
 	</ol>
